; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps_pci.c_mps_pci_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps_pci.c_mps_pci_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mps_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mps_pci_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mps_pci_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.mps_softc*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.mps_softc* @device_get_softc(i32 %6)
  store %struct.mps_softc* %7, %struct.mps_softc** %4, align 8
  %8 = load %struct.mps_softc*, %struct.mps_softc** %4, align 8
  %9 = call i32 @mps_free(%struct.mps_softc* %8)
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %5, align 4
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load %struct.mps_softc*, %struct.mps_softc** %4, align 8
  %15 = call i32 @mps_pci_free(%struct.mps_softc* %14)
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local %struct.mps_softc* @device_get_softc(i32) #1

declare dso_local i32 @mps_free(%struct.mps_softc*) #1

declare dso_local i32 @mps_pci_free(%struct.mps_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
